2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Update URBI_DIRS.
	* build-aux/urbi-dirs.m4: Update from liburbi-cpp.
	* configure.ac: Use it.
	* Makefile.am (AM_CPPFLAGS): Remove useless ones, add missing ones.
	Ship uext.h.

2006-09-26  Type Your Name Here  <your.mail.here@fixme.com>

	Include path fix

	* utypes.h: Fix uobject.h include path, add uext.h include.
	* uvalue.cc: idem.
	* userver.cc: idem.
	* uobject/uext.h: New. Symlink from liburbi.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* uobject/uobject.cc: Add missing std::.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* uobject/uobject.cc (cleanTable): Cleanup.
	* Makefile.am: Formatting changes.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-openr.m4: New.
	* configure.ac: Use it.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* parser/bison/Makefile.defs: Install the header files.
	* network/bsdnet/Makefile.defs,
	* network/OPENR/Makefile.defs,
	* network/OPENR/Makefile.defs,
	* Makefile.am: Ditto.

	* userver.h: Reorder includes.
	* memorymanager/memorymanager.h: Formatting changes.

2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	namespace cleanups.
	* ucommand.cc: Don't "using" things from std::.
	Catch up with liburbi being in urbi::.
	* ucommand.h: Ditto.
	* uexpression.h: Ditto.
	* ufloat.h: Ditto.
	* ucallid.cc: Ditto.
	* ugroup.h: Ditto.
	* uexpression.cc: Ditto.
	* uvariable.cc: Ditto.
	* uconnection.h: Ditto.
	* ubinder.h: Ditto.
	* userver.cc: Ditto.
	* userver.h: Ditto.
	* uobj.cc: Ditto.
	* uobj.h: Ditto.
	* uobject/uvar.cc: Ditto.
	* uvariablename.cc: Ditto.
	* uvariable.h: Ditto.
	* uvariablename.h: Ditto.
	* ucallid.h: Ditto.
	* uconnection.cc: Ditto.
	* ubinder.cc: Ditto.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Use URBI_DIRS.
	* build-aux/urbi-dirs.m4: New.
	* configure.ac: Use it.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	distcheck fixes.
	* build-aux/doxygen.mk: Update.
	* build-aux/revision.mk: Clean version..hh.
