@@ -1,0 +1,10 @@
+#ifndef UBANNER_HH
+# define UBANNER_HH
+
+/// To display at the start of a session.
+extern const char* HEADER_BEFORE_CUSTOM[];
+
+/// To display at the end of a session.
+extern const char* HEADER_AFTER_CUSTOM[];
+
+#endif //!UBANNER_HH
